# world-dash

./: .env.example  .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile.api  Dockerfile.beat  Dockerfile.llm-worker  Dockerfile.postgres  Dockerfile.worker  LICENSE  Makefile  PHASE1-COMPLETE.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  rebuild.ps1  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
alembic/: README.md  env.py
alembic/versions/: 001_initial_schema.py  002_add_llm_columns.py  003_add_source_auth.py  004_add_pgvector_embeddings.py  005_add_clusters_and_chat.py
apps/api/: __init__.py  main.py
apps/web/: .eslintrc.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/components/: AlertPanel.tsx  AnalysisSummary.tsx  ChatPanel.tsx  ChatPanelWrapper.tsx  ClusterPanel.tsx  CommandBar.tsx  CompareBar.tsx  CompareView.tsx  DebugLog.tsx  ErrorBoundary.tsx  EventDetailDrawer.tsx  EventFeed.tsx  EventNetworkMap.tsx  FilterBar.tsx  InlineChart.tsx  InsightFeed.tsx  NavBar.tsx  TimelineScrubber.tsx  WorldMap.tsx
apps/web/src/lib/: useEventLoader.ts  useKeyboardShortcuts.ts
apps/web/src/store/: chat.ts  dashboard.ts
apps/web/src/styles/: globals.css
apps/worker/: __init__.py  celery_app.py  tasks.py
docker/: README.md  docker-compose.local.yml  docker-compose.yml
infra/: Dockerfile.llm-worker  Dockerfile.web
scripts/: README.md  seed.py  trigger-ingestion.ps1  trigger-ingestion.sh
tests/: conftest.py  test_intelligence.py  test_normalizer.py  test_storage.py
tests/itests/: conftest.py  test_storage.py
tests/ptests/: conftest.py
tests/utests/: conftest.py  test_intelligence.py  test_normalizer.py
